--- a/act_Application/Views/Transacciones/Create.cshtml
+++ b/act_Application/Views/Transacciones/Create.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Transaccion";
     DateTime minDate = DateTime.Now.AddDays(7);
     string minDateStr = minDate.ToString("yyyy-MM-dd");
+    DateTime maxDate = DateTime.Now.AddDays(14);
+    string maxDateStr = maxDate.ToString("yyyy-MM-dd");
     DateTime minDateP = DateTime.Now.AddDays(45);
     string minDateStrP = minDateP.ToString("yyyy-MM-dd");
 }
@@ -59,7 +61,7 @@
             <!--Contenedor de la Fecha de Inicio del Prestamo-->
             <div class="form-group">
                 <label asp-for="FechaIniCoutaPrestamo">Fecha de Inicio del Prestamo (CUOTA)</label>
-                <input asp-for="FechaIniCoutaPrestamo" type="date" class="inpdate" min="@minDateStr" max="@minDateStrP" id="FechaIniCoutaPrestamo"/>
+                <input asp-for="FechaIniCoutaPrestamo" type="date" class="inpdate" min="@minDateStr" max="@maxDateStr" id="FechaIniCoutaPrestamo"/>
                 <span asp-validation-for="FechaIniCoutaPrestamo" class="text-danger"></span>
             </div>
 
