--- a/act_Application/Views/ActMultas/Delete.cshtml
+++ b/act_Application/Views/ActMultas/Delete.cshtml
@@ -13,15 +13,15 @@
 <div class="container">
     <table>
         <tr>
-            <td class="titulo">Razon</td>
+            <td class="titulo">Id del Usuario</td>
             <td class="texto">@Html.DisplayFor(model => model.IdUser)</td>
         </tr>
         <tr>
-            <td class="titulo">Razon</td>
+            <td class="titulo">Porcentaje</td>
             <td class="texto">@Html.DisplayFor(model => model.Porcentaje)</td>
         </tr>
         <tr>
-            <td class="titulo">Id del Usuario</td>
+            <td class="titulo">Id de la Aportacion</td>
             <td class="texto">@Html.DisplayFor(model => model.IdAportacion)</td>
         </tr>
         <tr>
