--- a/act_Application/Views/Transacciones/Create.cshtml
+++ b/act_Application/Views/Transacciones/Create.cshtml
@@ -96,9 +96,9 @@
 
             <!--Contenedor de la Fecha de Pago Total-->
             <div class="form-group">
-                <label asp-for="FechPagoTotalPrestamo">Fecha Tentativa de Pago (CUOTA)</label>
-                <input asp-for="FechPagoTotalPrestamo" type="date" class="inpdate" id="FechPagoTotalPrestamo" min="@minDateStrP" />
-                <span asp-validation-for="FechPagoTotalPrestamo" class="text-danger"></span>
+                <label asp-for="FechaPagoTotalPrestamo">Fecha Tentativa de Pago (CUOTA)</label>
+                <input asp-for="FechaPagoTotalPrestamo" type="date" class="inpdate" id="FechPagoTotalPrestamo" min="@minDateStrP" />
+                <span asp-validation-for="FechaPagoTotalPrestamo" class="text-danger"></span>
             </div>
 
             <!--Contenedor de los Botones-->
