--- a/act_Application/Views/ActTransacciones/Edit.cshtml
+++ b/act_Application/Views/ActTransacciones/Edit.cshtml
@@ -36,9 +36,14 @@
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="FechPagoTotalPrestamo" class="control-label"></label>
-                    <input asp-for="FechPagoTotalPrestamo" class="form-control" />
-                    <span asp-validation-for="FechPagoTotalPrestamo" class="text-danger"></span>
+                    <label asp-for="FechaPagoTotalPrestamo" class="control-label"></label>
+                    <input asp-for="FechaPagoTotalPrestamo" class="form-control" />
+                    <span asp-validation-for="FechaPagoTotalPrestamo" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FechaEntregaDinero" class="control-label"></label>
+                    <input asp-for="FechaEntregaDinero" class="form-control" />
+                    <span asp-validation-for="FechaEntregaDinero" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="FechaIniCoutaPrestamo" class="control-label"></label>
@@ -55,5 +60,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
