--- a/act_Application/Views/Shared/_Layout.cshtml
+++ b/act_Application/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header> 
+    <header>
     </header>
     <nav class="sidebar close">
         <header>
@@ -36,88 +36,104 @@
                     </li>
                 </ul>
                 <ul class="menu-links">
+                    @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio") || User.HasClaim("Rol", "Referido"))
+                    {
+                        @if (User.HasClaim("Rol", "Administrador"))
+                        {
+                            <li class="nav-link">
+                                <button id="adminButton" type="button" class="toggle-button">
+                                    <i class='bx bx-home-alt icon'></i>
+                                    <span class="text nav-text">Administracion</span>
+                                </button>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActCuotas/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T.Cuotas</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActNotificaciones/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Notificaciones</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActUsers/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Usuarios</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActRols/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Roles</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActRolUsers/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Roles y Usuarios</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActAportaciones/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Aportaciones</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActTransacciones/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Transacciones</span>
+                                </a>
+                            </li>
+                            <li class="nav-link hidden-item">
+                                <a href="~/ActMultas/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">T. Multas</span>
+                                </a>
+                            </li>
+                        }
 
-                    @if (User.HasClaim("Rol", "Administrador"))
-                    {
-                        <li class="nav-link">
-                            <button id="adminButton" type="button" class="toggle-button">
-                                <i class='bx bx-home-alt icon'></i>
-                                <span class="text nav-text">Administracion</span>
-                            </button>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActUsers/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Usuarios</span>
-                            </a>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActRols/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Roles</span>
-                            </a>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActRolUsers/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Roles y Usuarios</span>
-                            </a>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActAportaciones/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Aportaciones</span>
-                            </a>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActTransacciones/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Transacciones</span>
-                            </a>
-                        </li>
-                        <li class="nav-link hidden-item">
-                            <a href="~/ActMultas/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">T. Multas</span>
-                            </a>
-                        </li>
-                    }
-                    @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
-                    {
-                        <li class="nav-link">
-                            <a href="~/Aportar/Create">
-                                <i class='bx bx-money icon'></i>
-                                <span class="text nav-text">Aportar</span>
-                            </a>
-                        </li>
+                        @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Socio"))
+                        {
+                            <li class="nav-link">
+                                <a href="~/Aportar/Create">
+                                    <i class='bx bx-money icon'></i>
+                                    <span class="text nav-text">Aportar</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-link">
+                                <a href="~/TablaAportaciones/Index">
+                                    <i class='bx bx-table icon'></i>
+                                    <span class="text nav-text">Tabla de Aportacion</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-link">
+                                <a href="~/TablaMultas/Index">
+                                    <i class='bx bx-window-close icon'></i>
+                                    <span class="text nav-text">Tabla de Multas</span>
+                                </a>
+                            </li>
+                        }
+
+                        @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Referido"))
+                        {
+                            <li class="nav-link">
+                                <a href="~/Transacciones/Create">
+                                    <i class='bx bx-money-withdraw icon'></i>
+                                    <span class="text nav-text">Peticiones</span>
+                                </a>
+                            </li>
+                        }
 
                         <li class="nav-link">
                             <a href="#">
                                 <i class='bx bx-bell icon'></i>
                                 <span class="text nav-text">Notificationes</span>
-                            </a>
-                        </li>
-
-                        <li class="nav-link">
-                            <a href="~/TablaAportaciones/Index">
-                                <i class='bx bx-table icon'></i>
-                                <span class="text nav-text">Tabla de Aportacion</span>
-                            </a>
-                        </li>
-
-                        <li class="nav-link">
-                            <a href="~/TablaMultas/Index">
-                                <i class='bx bx-window-close icon'></i>
-                                <span class="text nav-text">Tabla de Multas</span>
-                            </a>
-                        </li>
-                    }
-                    @if (User.HasClaim("Rol", "Administrador") || User.HasClaim("Rol", "Referente"))
-                    {
-                        <li class="nav-link">
-                            <a href="~/Transacciones/Create">
-                                <i class='bx bx-money-withdraw icon'></i>
-                                <span class="text nav-text">Prestamos</span>
                             </a>
                         </li>
                     }
@@ -157,7 +173,7 @@
     </section>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src= "/js/navBar.js"></script>
+    <script src="/js/navBar.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
