Vista de Prestamos Parte 4 (V. P Completada, V. Notificaciones Iniciada)

--- a/act_Application/Views/ActNotificaciones/Delete.cshtml
+++ b/act_Application/Views/ActNotificaciones/Delete.cshtml
@@ -30,6 +30,10 @@
                 <td class="titulo">Fecha Notificacion</td>
                 <td class="texto">@Html.DisplayFor(model => model.FechaNotificacion)</td>
             </tr>
+            <tr>
+                <td class="titulo">Fecha Notificacion</td>
+                <td class="texto">@Html.DisplayFor(model => model.Destino)</td>
+            </tr>
         </table>
     </div>
     <div class="btn-container">
