--- a/act_Application/Views/Home/Menu.cshtml
+++ b/act_Application/Views/Home/Menu.cshtml
@@ -13,7 +13,7 @@
         {
             <p>Bienvenido Usuario.</p>
         }
-        else if (User.HasClaim("Rol", "Referente"))
+        else if (User.HasClaim("Rol", "Referido"))
         {
             <p>Bienvenido Usuario.</p>
         }
