--- a/act_Application/wwwroot/css/General/Notificaciones.css
+++ b/act_Application/wwwroot/css/General/Notificaciones.css
@@ -1,6 +1,6 @@
 ﻿
 .content-notif {
-    align-items:center;
+    align-items: center;
     display: flex;
     flex-direction: column;
     gap: 20px; /* Separación entre las notificaciones */
@@ -8,11 +8,11 @@
 
 /* Estilos para el contenedor de cada notificación */
 .notif-container {
-    justify-content:center;
+    justify-content: center;
     margin: 10px 40px 10px 40px;
     border: 2.5px solid white;
     border-radius: 10px;
-    padding:10px 20px 10px 20px;
+    padding: 10px 20px 10px 20px;
     width: 750px;
     height: 150px;
 }
@@ -24,19 +24,19 @@
 
 /* Estilos para el botón de visualización */
 .btn-visualizar {
-    justify-content:center;
+    justify-content: center;
     height: 50px;
-    width:150px;
-    margin:0px 0px 0px auto;
+    width: 150px;
+    margin: 0px 0px 0px auto;
     background-color: royalblue;
     border-radius: 5px;
     cursor: pointer;
-    color:white;
+    color: white;
 }
 
     /* Efecto Hover para el botón */
     .btn-visualizar:hover {
-        background-color:blue;
+        background-color: blue;
         color: black;
     }
 
@@ -50,16 +50,9 @@ body:not(.dark) .content-text {
     color: #000000; /* Cambiar el color del texto en modo claro */
 }
 
-.modal__description {
-    margin-top: 10px;
-    text-align: left;
-    white-space: pre-wrap;
-    overflow: auto;
-    max-height: 200px; /* Máxima altura para evitar que la ventana modal se haga muy grande */
-    max-width: 1000px;
-}
 
-.modal {
+
+.modal-principal {
     display: none;
     position: fixed;
     top: 0;
@@ -68,24 +61,13 @@ body:not(.dark) .content-text {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.modal__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
 }
 
 .modal__container {
     position: absolute;
     background-color: white;
     top: -100%;
-    left: 40%;
+    left: 10%;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -102,7 +84,7 @@ body:not(.dark) .content-text {
     }
 
     100% {
-        top: 40%;
+        top: 25%;
     }
 }
 
@@ -116,4 +98,97 @@ body:not(.dark) .content-text {
     color: #888;
     text-decoration: none;
     cursor: pointer;
+}
+
+.modal__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.modal__description {
+    margin-top: 10px;
+    text-align: left;
+    white-space: pre-wrap;
+    overflow: auto;
+    max-height: 200px; /* Máxima altura para evitar que la ventana modal se haga muy grande */
+    max-width: 1000px;
+}
+
+.btn-mdl-confir {
+    background-color: #8BC34A; /* Verde sabila */
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s; /* Transición suave al hacer hover */
+    margin-top: 20px; /* Separación del botón cerrar */
+    margin-right: 30px; /* Separación del botón cerrar */
+    width: 125px;
+}
+
+    .btn-mdl-confir:hover {
+        background-color: #689F38; /* Verde real con efecto hover */
+    }
+
+.container-modal-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px; /* Separación del botón cerrar */
+}
+
+.modal-secundaria {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal-secundaria__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.modal-secundaria__close {
+    display: block;
+    margin-top: 10px;
+    color: #888;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-secundaria__container {
+    position: absolute;
+    background-color: white;
+    top: -100%;
+    left: 10%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+    animation: slideIn 0.5s forwards;
+    max-width: 80%; /* Ajusta este valor según tus preferencias */
+}
+
+@keyframes slideIn {
+    0% {
+        top: -100%;
+    }
+
+    100% {
+        top: 25%;
+    }
 }
