--- a/act_Application/wwwroot/css/General/Notificaciones.css
+++ b/act_Application/wwwroot/css/General/Notificaciones.css
@@ -192,3 +192,27 @@ body:not(.dark) .content-text {
         top: 25%;
     }
 }
+
+.input-date {
+    width: 100%;
+    padding: 8px 8px 8px 30px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+}
+
+.save-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-left: 20px;
+    justify-content: center;
+}
