--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -48,16 +48,17 @@
                         <div class="modal-secundaria__container">
                             <h2 class="modal__title">Soy una ventana Modal Secundaria</h2>
                             <div class="modal-secundaria__content">
-                                <form asp-action="Edit" method="post">
+                                <form asp-action="Edit">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <input type="hidden" asp-for="@notificacion.Transacciones.Id" />
                                     <div class="form-group">
-                                        <label asp-for="@notificacion.Transacciones.Razon" class="control-label">Razon de la Operacion</label>
-                                        <input asp-for="@notificacion.Transacciones.Razon" class="input-date" disabled />
-                                        <span asp-validation-for="@notificacion.Transacciones.Razon" class="text-danger"></span>
+                                        <label asp-for="@notificacion.Transacciones.Id" class="control-label">Fecha de Pago del Prestamo</label>
+                                        <input asp-for="@notificacion.Transacciones.Id"  />
+                                        <span asp-validation-for="@notificacion.Transacciones.Id" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
                                         <label asp-for="@notificacion.Transacciones.FechaPagoTotalPrestamo" class="control-label">Fecha de Pago del Prestamo</label>
-                                        <input asp-for="@notificacion.Transacciones.FechaPagoTotalPrestamo" type="date" class="input-date" />
+                                        <input asp-for="@notificacion.Transacciones.FechaPagoTotalPrestamo" type="date" id="FechaPagoTotalPrestamo" class="input-date" />
                                         <span asp-validation-for="@notificacion.Transacciones.FechaPagoTotalPrestamo" class="text-danger"></span>
                                     </div>
                                     <div class="container-modal-btn">
